--- a/PersistenceApp/Infrastructure/ToDo.txt
+++ b/PersistenceApp/Infrastructure/ToDo.txt
@@ -4,7 +4,7 @@ Rabbit + basic console App
 Docker Compose with everything
 Test Project
 Serilog, ElasticSearch, Kibana - Nick Chapsas
-
+Dapper
 
 // docker pull redis
 // docker run --name my-redis -p 6379:6379 -d redis
